--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -50832,7 +50832,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     transition: none;
   }
 }
-.atm_mk_h2mmj6 {
+.relative {
   position: relative;
 }
 ._1lovwbn {
