--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -41740,13 +41740,13 @@ video::cue {
     margin: 16px 0 !important;
   }
 }
-._15umbdc {
+.alert-title {
   color: #222 !important;
   font-weight: 800 !important;
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._lopxyt {
+.alert-text {
   margin-top: 4px !important;
   color: #717171 !important;
   font-size: 14px !important;
@@ -59782,7 +59782,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background: var(--gray-900);
   transform: translateX(-50%);
 }
-._7ytvj78 {
+.alert-danger {
   background-color: #fff !important;
   border-width: 8px 1px 1px !important;
   border-style: solid !important;
@@ -59801,16 +59801,16 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin: 16px 0 !important;
 }
 @media (min-width: 744px) {
-  ._7ytvj78 {
+  .alert-danger {
     box-shadow: rgb(0 0 0 / 18%) 0 2px 4px !important;
     position: static !important;
     margin: 16px 0 !important;
   }
 }
-._dn1bj5 {
+.alert-body {
   flex: 1 1 auto !important;
 }
-._1lkho1 {
+.alert-icon {
   flex: 0 0 auto !important;
   margin-right: 8px !important;
 }
