--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16321,6 +16321,458 @@ fieldset[disabled] .btn {
 input[type='button'].btn-block {
   width: 100%;
 }
+@media (hover: hover) {
+  .btn-dark-block:hover {
+    border: none !important;
+    background: var(--black) !important;
+    color: var(--white) !important;
+  }
+}.btn-dark-block {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0 !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  touch-action: manipulation !important;
+  font-family: var(--font-family) !important;
+  font-size: var(--font-size) !important;
+  line-height: var(--line-height-md) !important;
+  font-weight: var(--font-weight-semibold) !important;
+  border-radius: var(--border-radius) !important;
+  outline: 0 !important;
+  padding: 14px 24px !important;
+  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s,
+    transform 0.1s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: var(--gray-900) !important;
+  color: var(--white) !important;
+  contain: paint !important;
+  width: 100% !important;
+}.btn-dark-block:disabled {
+  cursor: not-allowed !important;
+  opacity: 1 !important;
+  border: none !important;
+  background: var(--gray-300) !important;
+  color: var(--white) !important;
+}
+.btn-card {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid rgba(176, 176, 176, 0.5) !important;
+  background-color: #fff !important;
+  outline: 0 !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  border-radius: 16px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+@media (hover: hover) {
+  .btn-card:hover {
+    color: #000 !important;
+    border-color: #000 !important;
+  }
+}
+.btn-card__inner {
+  -webkit-box-pack: justify !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  padding: 16px !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: space-between !important;
+  color: #222 !important;
+  min-height: 120px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+.size-8 {
+  width: 32px !important;
+  height: 32px !important;
+}
+.btn-card__title {
+  font-weight: 600 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  text-align: left !important;
+  padding-top: 24px !important;
+  white-space: normal !important;
+}
+.btn-card__container {
+  -webkit-box-pack: center !important;
+  position: relative !important;
+  display: flex !important;
+  justify-content: center !important;
+  height: 100% !important;
+}
+.dir.btn-map-ctrl-in[class][class] {
+  border-radius: var(--go-h-jh-l) var(--go-h-jh-l) 0 0;
+}
+.dir.btn-map-ctrl-out[class][class] {
+  border-radius: 0 0 var(--go-h-jh-l) var(--go-h-jh-l);
+}
+.dir.btn-map-ctrl-base[class][class] {
+  border: none;
+  margin: 0;
+  padding: 0;
+  background: 0 0;
+}
+.dir.btn-map-ctrl[class][class] {
+  background: 0 0;
+}
+.btn-map-ctrl-base[class][class] {
+  overflow: visible;
+  font: inherit;
+}
+.btn-map-ctrl-size[class][class] {
+  width: 40px;
+  height: 40px;
+  position: relative;
+}
+.btn-map-ctrl[class][class] {
+  color: var(--f-k-smk-x);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-light {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0 !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  width: auto !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  border-radius: 8px !important;
+  border-width: 1px !important;
+  outline: 0 !important;
+  padding-top: 14px !important;
+  padding-bottom: 14px !important;
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+  -webkit-transition: box-shadow 0.2s, -webkit-transform 0.1s, transform 0.1s !important;
+  -moz-transition: box-shadow 0.2s, transform 0.1s !important;
+  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s,
+    transform 0.1s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  color: #222 !important;
+  background: #fff !important;
+}
+.btn-light:focus-visible {
+  outline: 0 !important;
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #222, 0 0 0 4px rgba(255, 255, 255, 0.8) !important;
+}
+.btn-light:focus-visible::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.btn-light:focus-visible:focus::-moz-focus-inner {
+  border: none !important;
+}
+.btn-light:focus-visible:-moz-focusring {
+  outline: 0 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn-light:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.btn-light:hover {
+  border: none !important;
+  color: #222 !important;
+  background: #ebebeb !important;
+}
+.btn-light:active {
+  -webkit-transform: scale(0.96) !important;
+  -ms-transform: scale(0.96) !important;
+  transform: scale(0.96) !important;
+  border: none !important;
+  background: #ebebeb !important;
+  color: #222 !important;
+}
+.btn-light:disabled {
+  cursor: not-allowed !important;
+  opacity: 1 !important;
+  border: none !important;
+  background: #4a4a4a !important;
+  color: #878787 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn-light {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.btn-link-underline {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+  background: 0 0 !important;
+  border: 0 !important;
+  cursor: pointer !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  -webkit-user-select: auto !important;
+  -moz-user-select: auto !important;
+  -ms-user-select: auto !important;
+  user-select: auto !important;
+  color: #222 !important;
+  text-decoration: underline !important;
+  border-radius: 4px !important;
+  font-weight: 600 !important;
+  text-align: inherit !important;
+  outline: 0 !important;
+}
+.btn-link-underline:focus {
+  color: inherit !important;
+  text-decoration: underline !important;
+}
+.btn-link-underline:visited {
+  color: #222 !important;
+  text-decoration: underline !important;
+}
+@media (hover: hover) {
+  .btn-link-underline:hover {
+    cursor: pointer !important;
+    color: #000 !important;
+    text-decoration: underline !important;
+  }
+}
+.btn-link-underline:active {
+  color: #717171 !important;
+  text-decoration: underline !important;
+}
+.btn-link-underline::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.btn-link-underline:focus::-moz-focus-inner {
+  border: none !important;
+}
+.btn-link-underline:-moz-focusring {
+  outline: 0 !important;
+}
+.btn-link-underline:focus-visible {
+  color: #222 !important;
+  text-decoration: underline !important;
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn-link-underline:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.btn-link-underline:disabled {
+  cursor: not-allowed !important;
+  color: #ddd !important;
+  text-decoration: underline !important;
+}
+@media (hover: hover) {
+  .btn-link-underline:disabled:hover {
+    text-decoration: none !important;
+  }
+}
+.btn-link-underline:disabled:hover {
+  text-decoration: underline !important;
+}
+.btn-content-label {
+  display: block !important;
+  position: relative !important;
+  pointer-events: none !important;
+}
+.btn-content-hover-container {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  overflow: hidden !important;
+  -webkit-mask-image: -webkit-radial-gradient(white, black) !important;
+  border-radius: 8px !important;
+}
+.btn-primary-content-hover {
+  display: block !important;
+  width: 100% !important;
+  height: 100% !important;
+  min-width: 200px !important;
+  background-size: 200% 200% !important;
+  opacity: 0 !important;
+  -webkit-transition: opacity 1.25s !important;
+  -moz-transition: opacity 1.25s !important;
+  transition: opacity 1.25s !important;
+  background-image: -webkit-radial-gradient(
+    circle at center,
+    #ff385c 0,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  ) !important;
+  background-image: -moz-radial-gradient(
+    circle at center,
+    #ff385c 0,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  ) !important;
+  background-image: radial-gradient(
+    circle at center,
+    #ff385c 0,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  ) !important;
+}
+.btn-primary-content-hover:hover {
+  opacity: 1 !important;
+}
+.btn-primary-content-hover:active {
+  -webkit-transition: -webkit-transform 2s, transform 2s, opacity 2s !important;
+  -moz-transition: transform 2s, opacity 2s !important;
+  transition: -ms-transform 2s, -webkit-transform 2s, transform 2s, opacity 2s !important;
+  opacity: 0 !important;
+  -webkit-transform: scale(5) !important;
+  -ms-transform: scale(5) !important;
+  transform: scale(5) !important;
+}
+.btn-outline {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0 !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  border-width: 1px !important;
+  width: auto !important;
+  background: #fff !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  border-radius: 8px !important;
+  border-style: solid !important;
+  outline: 0 !important;
+  padding-top: 13px !important;
+  padding-bottom: 13px !important;
+  padding-left: 23px !important;
+  padding-right: 23px !important;
+  -webkit-transition: box-shadow 0.2s, -webkit-transform 0.1s, transform 0.1s !important;
+  -moz-transition: box-shadow 0.2s, transform 0.1s !important;
+  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s,
+    transform 0.1s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border-color: #222 !important;
+  color: #222 !important;
+}
+.btn-outline:focus-visible {
+  outline: 0 !important;
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #222, 0 0 0 4px rgba(255, 255, 255, 0.8) !important;
+  border-color: #222 !important;
+  color: #222 !important;
+}
+.btn-outline:focus-visible::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.btn-outline:focus-visible:focus::-moz-focus-inner {
+  border: none !important;
+}
+.btn-outline:focus-visible:-moz-focusring {
+  outline: 0 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn-outline:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+@media (hover: hover) {
+  .btn-outline:hover {
+    border-color: #000 !important;
+    background: #f7f7f7 !important;
+    color: #222 !important;
+  }
+}
+.btn-outline:active {
+  -webkit-transform: scale(0.96) !important;
+  -ms-transform: scale(0.96) !important;
+  transform: scale(0.96) !important;
+  border-color: #000 !important;
+  background: #f7f7f7 !important;
+  color: #222 !important;
+}
+.btn-outline:disabled {
+  cursor: not-allowed !important;
+  opacity: 1 !important;
+  border-color: #ddd !important;
+  background: #fff !important;
+  color: #ddd !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn-outline {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+@media (prefers-reduced-motion: reduce) {
+  .dir.btn-filter[class][class]:focus-visible {
+    transition: none;
+  }
+}
 
 /*! CALENDAR COMPONENT */
 .calendar__next-month {
