--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4665,6 +4665,94 @@ html :where(img[class*='wp-image-']) {
 .w-auto {
   width: auto !important;
 }
+@media (min-width: 1200px) {
+  .flex-xl {
+    display: flex !important;
+  }
+}
+.flex-50 {
+  flex: 0 0 50% !important;
+}
+.flex-grow-1 {
+  -webkit-box-flex: 1 !important;
+  -ms-flex-positive: 1 !important;
+  -webkit-flex-grow: 1 !important;
+  flex-grow: 1 !important;
+}
+.flex-content-center {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+}
+.flex-items-center {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+}
+.flex-items-center {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+}
+.flex-bar {
+  -webkit-box-align: center !important;
+  text-align: justify !important;
+  line-height: 0 !important;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  align-items: center !important;
+}
+.flex-bar-item {
+  display: inline-block !important;
+  vertical-align: middle !important;
+}
+.flex-item {
+  -ms-grid-row-align: center !important;
+  -ms-flex-item-align: center !important;
+  display: -webkit-inline-box !important;
+  display: -moz-inline-box !important;
+  display: -ms-inline-flexbox !important;
+  display: -webkit-inline-flex !important;
+  display: inline-flex !important;
+  -webkit-align-self: center !important;
+  align-self: center !important;
+}
+.flex-bar::after {
+  content: '' !important;
+  display: inline-block !important;
+  vertical-align: top !important;
+  width: 100% !important;
+}
+.flex-grow-1 {
+  -webkit-box-flex: 1 !important;
+  flex-grow: 1 !important;
+}
+.flex-items::after,
+.flex-items::before {
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  content: '' !important;
+}
+.flex-1 {
+  -webkit-flex: 1 !important;
+  -ms-flex: 1 1 0% !important;
+  flex: 1 !important;
+}
 
 /*! FOOTER COMPONENT */
 .footer__links:not(last-child) {
@@ -16327,7 +16415,8 @@ input[type='button'].btn-block {
     background: var(--black) !important;
     color: var(--white) !important;
   }
-}.btn-dark-block {
+}
+.btn-dark-block {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -16350,7 +16439,8 @@ input[type='button'].btn-block {
   color: var(--white) !important;
   contain: paint !important;
   width: 100% !important;
-}.btn-dark-block:disabled {
+}
+.btn-dark-block:disabled {
   cursor: not-allowed !important;
   opacity: 1 !important;
   border: none !important;
